* minor bulk changes and, - classes removed