@@ -38,7 +38,7 @@ final class MatTree {
 				if (rs.next()) {
 					final List<Object> result = new ArrayList<>();
 					do {
-						result.add( new Integer( rs.getInt( 1 ) ) );
+						result.add( Integer.valueOf( rs.getInt( 1 ) ) );
 						result.add( rs.getString( 2 ) );
 					} while (rs.next());
 					return result;
@@ -58,7 +58,7 @@ final class MatTree {
 				if (rs.next()) {
 					final List<Object> result = new ArrayList<>();
 					do {
-						result.add( new Integer( rs.getInt( 1 ) ) );
+						result.add( Integer.valueOf( rs.getInt( 1 ) ) );
 						result.add( rs.getString( 2 ) );
 					} while (rs.next());
 					return result;
